# pubsub-vertex-ai-example

./: .gitignore  README.md
data-generator/: pom.xml
data-generator/src/main/java/data_generator/: TransactionGenerator.java
fraud-agent/: .gitignore  delete.py  deploy.py  implicit_session_service.py  pyproject.toml  requirements.txt
fraud-agent/agent/: agent.py
scripts/: cleanup-fraud-example-input-resources.sh  cleanup-fraud-example-output-resources.sh  create-fraud-example-input-resources.sh  create-fraud-example-output-resources.sh
smt/: fraud-example-smt.yml
